<ScrollView
    android:background="@drawable/wallpaper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10sp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/detail_pengaduan"
            android:textAlignment="center"
            android:layout_marginBottom="10sp"
            android:textStyle="bold"
            android:textColor="@color/input_login"
            android:shadowColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5sp"
            android:text="@string/nama_pengadu"
            android:textStyle="bold"
            android:textColor="#000110" />

        <EditText
            android:id="@+id/dnama"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@drawable/oval"
            android:editable="false"
            android:padding="7dp"
            tools:ignore="TextFields" />

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_ktp"
            android:paddingBottom="5sp"
            android:textColor="#000110"/>

        <EditText
            android:id="@+id/did_ktp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval"
            android:padding="5sp"
            android:editable="false"
            android:layout_marginBottom="10sp"
            />


        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kec"
            android:paddingBottom="5sp"
            android:textColor="#000110"/>

        <EditText
            android:id="@+id/dkec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval"
            android:padding="5sp"

            android:editable="false"
            android:layout_marginBottom="10sp"
            />

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kel"
            android:paddingBottom="5sp"
            android:textColor="#000110"/>

        <EditText
            android:id="@+id/dkel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval"
            android:padding="5sp"
            android:editable="false"
            android:layout_marginBottom="10sp"
            />

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rt"
            android:paddingBottom="5sp"
            android:textColor="#000110"/>

        <EditText
            android:id="@+id/drt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval"
            android:padding="5sp"
            android:editable="false"
            tools:ignore="TextFields" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5sp"
            android:text="@string/rw"
            android:textStyle="bold"
            android:textColor="#000110"/>

        <EditText
            android:id="@+id/drw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10sp"
            android:background="@drawable/oval"
            android:editable="false"
            android:padding="5sp"
            tools:ignore="TextFields" />

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:paddingBottom="5sp"
            android:textColor="#000110"/>

        <EditText
            android:id="@+id/dalamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval"
            android:padding="5sp"
            android:editable="false"
            android:layout_marginBottom="10sp"
            />


        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:paddingBottom="5sp"
            android:textColor="#000110"/>

        <EditText
            android:id="@+id/demail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval"
            android:padding="5sp"
            android:editable="false"
            android:layout_marginBottom="10sp"
            />

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kantor"
            android:visibility="gone"
            android:paddingBottom="5sp"
            android:textColor="#000110"/>

        <EditText
            android:id="@+id/dskpd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval"
            android:padding="5sp"
            android:editable="false"
            android:layout_marginBottom="10sp"
            android:visibility="gone"
            />

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pengaduan_anda"
            android:paddingBottom="5sp"
            android:visibility="gone"
            android:textColor="#000110"/>

        <EditText
            android:id="@+id/dkeluhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval"
            android:padding="5sp"
            android:visibility="gone"
            android:layout_marginBottom="10sp"
            android:editable="false"/>

    </LinearLayout>
</ScrollView>


