<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mascitra.android.pengaduanlmj.activity.FormulirActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/oval"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_pengadu"
                    android:inputType="textCapWords" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/alamat_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nama">

                <EditText
                    android:id="@+id/textAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat" />
            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/kecamatan"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/alamat_layout"
                android:layout_marginBottom="5dp"
                android:background="@drawable/oval"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:textColor="@color/input_login" />

            <Spinner
                android:id="@+id/kelurahan"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/kecamatan"
                android:layout_marginBottom="5dp"
                android:background="@drawable/oval"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:textColor="@color/input_login" />


            <TextView
                android:id="@+id/textFotoKtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/kelurahan"
                android:padding="7sp"
                android:text="Foto KTP Anda :" />

            <ImageView
                android:id="@+id/fotoKtp"
                android:layout_width="250sp"
                android:layout_height="150sp"
                android:layout_below="@+id/textFotoKtp"
                android:backgroundTintMode="src_over" />

            <ImageView
                android:id="@+id/imgktp"
                android:layout_width="200sp"
                android:layout_height="150sp"
                android:layout_below="@+id/textFotoKtp"
                android:background="@drawable/no_image"
                />

            <ImageButton
                android:id="@+id/btnCameraKTP"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="1sp"
                android:background="@drawable/ripple_effect"
                android:src="@drawable/ic_camera"
                android:layout_below="@+id/textFotoKtp"
                android:layout_toEndOf="@+id/imagePengaduan" />

            <ImageButton
                android:id="@+id/btnGaleryKTP"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10sp"
                android:background="@drawable/ripple_effect"
                android:src="@drawable/ic_galery"
                android:layout_below="@+id/btnCameraKTP"
                android:layout_alignStart="@+id/btnCameraKTP" />


            <TextView
                android:id="@+id/cameratext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgktp"
                android:layout_marginLeft="10dp"
                android:text="Ambil Gambar :" />

            <ImageView
                android:id="@+id/imagePengaduan"
                android:layout_width="200sp"
                android:layout_height="150sp"
                android:layout_below="@+id/cameratext"
                android:background="@drawable/no_image" />

            <ImageButton
                android:id="@+id/btnCamera"

                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignTop="@+id/imagePengaduan"

                android:layout_toEndOf="@+id/imagePengaduan"
                android:background="@drawable/ripple_effect"
                android:onClick="launchClick"
                android:src="@drawable/ic_camera" />

            <ImageButton
                android:id="@+id/btnGalery"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignStart="@+id/btnCamera"
                android:layout_below="@+id/btnCamera"
                android:layout_marginTop="10dp"
                android:background="@drawable/ripple_effect"
                android:src="@drawable/ic_galery" />

            <Spinner
                android:id="@+id/skpd"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="100"
                android:background="@drawable/oval"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:textColor="@color/input_login"
                android:layout_below="@id/imagePengaduan"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/skpd">

                <EditText
                    android:id="@+id/isi_pengaduan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:hint="@string/pengaduan_anda"
                    android:padding="7dp"/>
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>
    </ScrollView>

</FrameLayout>
